adopted to new jiffy 1.2.0